fixing html tag

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-   <h1></text>NIMISHA A S</h1>
+    <center> <h1>NIMISHA A S</h1></center>
+  
    <h4>Kerala,India | nimishabineesh96@gmail.com | +91 7356085706</h4>
-    <h2> PROFESSIONAL SUMMARY</h2>
+    <h2> PROFESSIONAL SUMMARY</h2>git
     <hr>
     <p>Motivated MCA student with working knowledge of HTML, CSS, JavaScript, and Python.<br> Capable of developing basic web pages and simple applications with a willingness to learn and improve technical skills.<br> A quick learner with good problem-solving abilities, seeking an opportunity to start a career in the IT industry and gain practical experience.</p>
     <h2>ACADEMIC PROJECT / WORK EXPERIENCE</h2>
